EKS/MircroService/Deploy/kube-manifests/01-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.cxoj.us-east-1.rds.amazonaws.com
